# ocmu64

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  methods.md  methods.org  notes.org
data/exact/: 1.gr  12.gr  14.gr  17.gr  18.gr  23.gr  24.gr  27.gr  28.gr  29.gr  32.gr  35.gr  36.gr  37.gr  4.gr  40.gr  42.gr  47.gr  48.gr  51.gr  53.gr  55.gr  57.gr  59.gr  6.gr  60.gr  63.gr  64.gr  66.gr  67.gr  70.gr  71.gr  72.gr  76.gr  77.gr  81.gr  82.gr  85.gr  86.gr  87.gr  (+7 more)
data/heuristic/: 14.gr  7.gr
input/bad/: 40.gr  strongest-2.gr  strongest.gr
input/cutwidth/: 002.gr  003.gr  004.gr  005.gr  006.gr  007.gr  008.gr  009.gr  010.gr  011.gr  012.gr  013.gr  014.gr  015.gr  016.gr  017.gr  018.gr  019.gr  020.gr  021.gr  022.gr  023.gr  024.gr  025.gr  026.gr  027.gr  028.gr  029.gr  030.gr  031.gr  032.gr  033.gr  034.gr  035.gr  036.gr  037.gr  038.gr  039.gr  040.gr  041.gr  (+84 more)
input/cutwidth-100/: 001.gr  002.gr  005.gr  006.gr  008.gr  009.gr  010.gr  012.gr  013.gr  014.gr  016.gr  017.gr  019.gr  020.gr  021.gr  022.gr  023.gr  024.gr  025.gr  026.gr  027.gr  028.gr  029.gr  030.gr  031.gr  032.gr  033.gr  034.gr  035.gr  036.gr  037.gr  038.gr  039.gr  040.gr  041.gr  042.gr  043.gr  044.gr  045.gr  046.gr  (+60 more)
input/exact/: 003.gr  005.gr  008.gr  010.gr  011.gr  013.gr  016.gr  021.gr  027.gr  028.gr  031.gr  039.gr  041.gr  044.gr  045.gr  046.gr  049.gr  054.gr  056.gr  061.gr  07.gr  073.gr  078.gr  080.gr  083.gr  084.gr  089.gr  091.gr  096.gr  100.gr  12.gr  15.gr  19.gr  2.gr  20.gr  22.gr  25.gr  26.gr  29.gr  30.gr  (+17 more)
input/exact-bad/: 50.gr
input/exact-solved/: 001.gr  002.gr  003.gr  004.gr  005.gr  006.gr  007.gr  008.gr  009.gr  010.gr  011.gr  012.gr  013.gr  014.gr  015.gr  016.gr  017.gr  018.gr  019.gr  020.gr  021.gr  022.gr  023.gr  024.gr  025.gr  026.gr  027.gr  028.gr  029.gr  030.gr  031.gr  032.gr  033.gr  034.gr  035.gr  036.gr  037.gr  038.gr  039.gr  040.gr  (+39 more)
input/fan/: 200-80.gr
input/heuristic/: 015.gr  019.gr  039.gr  08.gr  40.gr  97.gr
input/medium/: 01.gr  02.gr  03.gr  04.gr  05.gr  (+54 more)
src/: database.rs  generate.rs  graph.rs  knapsack.rs  lib.rs  main.rs  max_with.rs  node.rs  pattern_search.rs
tex/: beamercolorthemenott.sty  beamerthemegemini.sty  bibliography.bib  description.tex  justfile  lipics-v2021.cls  paper.tex  poster-split.tex  poster.tex
(+18 files in other folders)
