[package]
name = "ocmu64"
version = "0.1.0"
edition = "2021"
default-run = "ocmu64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# 2x smaller file size when 'true', but that takes longer
# lto = true
lto = "thin"
# codegen-units = 1
incremental = true
opt-level = 3
# Debug symbols for profiling.
# TODO: Turn off in the final release.
debug = true
# TODO: Strip symbols to shrink binary size.
# strip = false


[dependencies]
bitvec = "1.0.1"
chrono = "0.4.33"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.2"
itertools = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
