[package]
name = "ocmu64"
version = "0.1.0"
edition = "2021"
default-run = "ocmu64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "thin"
incremental = true
opt-level = 3
debug = true
panic = 'abort'

# For submitting:
[profile.submit]
inherits = 'release'
incremental = false
lto = true
codegen-units = 1
debug = false
strip = true
panic = 'abort'

[features]
exact = []
# default = ['exact']

[dependencies]
assert2 = "0.3.11"
bitvec = "1.0.1"
chrono = "0.4.33"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
ctrlc = "3.4.2"
itertools = "0.12.0"
libc = "0.2.153"
log = "0.4.20"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
stderrlog = "0.6.0"
